--- a/about/index.html
+++ b/about/index.html
@@ -14,9 +14,31 @@ title: Math, Sonification, Plots
 
         <h1>About the Project</h1>
         <div><p>
-           This website is part of a human factors study to improve ergonomics for the visually impaired.
-           The concept originates from a <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology">CS 6460: Educational Technology</a> class project.
-           In addition to this website, I have built a
-           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform">survey</a> to gather information for utilizing High Contrast Settings.
+           Digital media is becoming much more than a supplement in the field of
+           educational technology. Online books, journals, collaboration, and even
+           graduate degrees can be obtained exclusively through digital resources.
+           Indeed, pedagogy has kept pace with advances in digital technology, and
+           for most, the educational experience has been enhanced. However, for those
+           with a visual impairment, the ability to travel unabated in a digital world
+           is rife with restrictions that limit access to information and educational
+           enrichment. Although tools such as screen readers (text to speech), magnifiers,
+           and high contrast settings allow the visually impaired to ride this information
+           superhighway, these assistive technologies are difficult for the visually
+           impaired to identify, locate, and configure. Even when configured, there are
+           many differences in how assistive technologies are implemented.
+           These inconsistencies further compound accessibility issues for the visually
+           impaired. Introducing a standard(s) based approach for assistive technology
+           would create uniformity across digital media, and would open the digital
+           autobahn to the visually impaired.
+        </p></div>
+        <div><p>
+           Another approach to convey information is to utilize a second sensory input.
+           A technology known as sonification shows promise as an assistive technology
+           to enhance learning in geometry, which is a completely visual form of mathematics.
+           Sonification uses sound: frequency, amplitude and timbre to convey information.
+           Sonification can increase accessibility by allowing observable objects such as curves
+           in a Euclidian plane can be visualized. Sonification and Standardization of assistive
+           technology are tractable, cost effective approaches to enhance pedagogy for the
+           visually impaired.
         </p></div>
 </div>
