--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@ title: Math, Sonification, Plots
         </style>
         </head>
 
-        <h1>About the Project</h1>
+        <h1>Project Abstract</h1>
         <div><p>
            Digital media is becoming much more than a supplement in the field of
            educational technology. Online books, journals, collaboration, and even
