--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ title: Math, Sonification, Plots
            The concept originates from a
            <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology">CS 6460: Educational Technology</a>
            class project. In addition to this website, I have built a
-           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform">survey</a>
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform"
+           target="_blank">survey</a>
            to gather information on the High Contrast Settings and Sonification implemented on the website.
         </p></div>
         <div><p>
