--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ title: Math, Sonification, Plots
         <div><p>
            This website is part of a human factors study to improve ergonomics for the visually impaired.
            The concept originates from a
-           <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology">CS 6460: Educational Technology</a>
+           <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology"
+           target="_HCS">CS 6460: Educational Technology</a>
            class project. In addition to this website, I have built a
            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform"
            target="_HCS">survey</a>
@@ -38,7 +39,8 @@ title: Math, Sonification, Plots
         <div><p>
            I encourage visitors to peruse the Math Plots: LINES, CIRCLES, PARABOLAS, HYPERBOLAS, and play with the
            High Contrast Settings and Sonification. Please provide comments and suggestions, and following your visit, kindly take the
-           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform">survey</a>.
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform"
+           target="_HCS">survey</a>.
         </p></div>
 
         <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
