--- a/fixes/index.html
+++ b/fixes/index.html
@@ -134,6 +134,14 @@ title: Math, Sonification, Plots
             border-style: double;
             border-width: 0px 0px 0px 60px;
         }
+
+        .vol {
+            width: 0;
+            height: 0;
+            border-top: 8px solid transparent;
+            border-left: 12px solid #000;
+            border-bottom: 8px solid transparent;
+        }
         </style>
 </head>
 
@@ -213,3 +221,4 @@ title: Math, Sonification, Plots
         </script>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
         <button class="play" onclick="play(this)">SONIFICATION</button>
+        <button class="vol" onclick="play(this)">VOL</button>
