--- a/fixes/index.html
+++ b/fixes/index.html
@@ -138,6 +138,7 @@ title: Math, Sonification, Plots
         .vol {
             width: 0;
             height: 0;
+            text-align: top;
             border-top: 8px solid transparent;
             border-left: 12px solid #000;
             border-bottom: 8px solid transparent;
