--- a/fixes/index.html
+++ b/fixes/index.html
@@ -138,7 +138,16 @@ title: Math, Sonification, Plots
         .vol {
             width: 0;
             height: 0;
-            text-align: top;
+            text-align: left;
+            border-top: 8px solid transparent;
+            border-right: 12px solid #000;
+            border-bottom: 8px solid transparent;
+        }
+
+        .ume {
+            width: 0;
+            height: 0;
+            text-align: right;
             border-top: 8px solid transparent;
             border-left: 12px solid #000;
             border-bottom: 8px solid transparent;
@@ -223,3 +232,4 @@ title: Math, Sonification, Plots
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
         <button class="play" onclick="play(this)">SONIFICATION</button>
         <button class="vol" onclick="play(this)">VOL</button>
+        <button class="ume" onclick="play(this)">UME</button>
