--- a/fixes/index.html
+++ b/fixes/index.html
@@ -177,6 +177,7 @@ title: Math, Sonification, Plots
                 var elem = document.getElementById("myAnimation");   
                 var pos = 0;
                 var id = setInterval(frame, 10);
+                var id = setTimeout(frame, 1000);
 
                 var audio = document.getElementById("audio");
                 var isPlaying = false;
@@ -245,5 +246,5 @@ title: Math, Sonification, Plots
         </script>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
         <button class="play" onclick="play(this)">SONIFICATION</button>
-        <button class="vol" onclick="vol_dec()">VOLUME</button>
+        <button class="vol" onclick="vol_dec()"></button>
         <button class="ume" onclick="vol_inc()">VOLUME</button>
