--- a/fixes/index.html
+++ b/fixes/index.html
@@ -138,19 +138,19 @@ title: Math, Sonification, Plots
         .vol {
             width: 0;
             height: 0;
-            text-align: right;
-            border-top: 20px solid transparent;
+            text-align: left;
+            border-top: 12px solid transparent;
             border-right: 40px solid #000;
-            border-bottom: 20px solid transparent;
+            border-bottom: 12px solid transparent;
         }
 
         .ume {
             width: 0;
             height: 0;
-            text-align: right;
-            border-top: 20px solid transparent;
+            text-align: left;
+            border-top: 12px solid transparent;
             border-left: 40px solid #000;
-            border-bottom: 20px solid transparent;
+            border-bottom: 12px solid transparent;
         }
         </style>
 </head>
@@ -177,17 +177,12 @@ title: Math, Sonification, Plots
                 var elem = document.getElementById("myAnimation");   
                 var pos = 0;
                 var id = setInterval(frame, 10);
-                var id = setTimeout(frame, 1000);
 
                 var audio = document.getElementById("audio");
                 var isPlaying = false;
 
                 function vol_inc() {
                         audio.volume += 0.1;
-                }
-
-                function vol_dec() {
-                        audio.volume -= 0.1;
                 }
 
                 function play(button) {
@@ -246,5 +241,5 @@ title: Math, Sonification, Plots
         </script>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
         <button class="play" onclick="play(this)">SONIFICATION</button>
-        <button class="vol" onclick="vol_dec()"></button>
-        <button class="ume" onclick="vol_inc()">VOLUME</button>
+        <button class="vol" onclick="vol_dec()">VOL</button>
+        <button class="ume" onclick="vol_inc()">UME</button>
