--- a/fixes/index.html
+++ b/fixes/index.html
@@ -105,7 +105,7 @@ title: Math, Sonification, Plots
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 74px;
+            height: 74;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -125,7 +125,7 @@ title: Math, Sonification, Plots
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 78px;
+            height: 74;
 
             // transition: 100ms all ease;
             cursor: pointer;
