--- a/fixes/index.html
+++ b/fixes/index.html
@@ -100,7 +100,7 @@ title: Math, Sonification, Plots
             color: white; /* White text */
             // color: #FFFFFF;
             text-align: left;
-            padding: 0px 5px;
+            // padding: 0px 5px;
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
@@ -120,7 +120,7 @@ title: Math, Sonification, Plots
             color: white; /* White text */
             // color: #FFFFFF;
             text-align: left;
-            padding: 0px 5px;
+            // padding: 0px 5px;
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
@@ -141,7 +141,7 @@ title: Math, Sonification, Plots
             // text-align: left;
             font-size: 16px;
             font-weight: bold;
-            padding: 0px 5px;
+            // padding: 0px 5px;
             border-top: 20px solid transparent;
             border-right: 40px solid #000;
             border-bottom: 20px solid transparent;
