--- a/fixes/index.html
+++ b/fixes/index.html
@@ -100,12 +100,12 @@ title: Math, Sonification, Plots
             color: white; /* White text */
             // color: #FFFFFF;
             text-align: left;
-            // padding: 0px 5px;
+            padding: 0px 5px;
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 76px;
+            height: 78px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -120,12 +120,12 @@ title: Math, Sonification, Plots
             color: white; /* White text */
             // color: #FFFFFF;
             text-align: left;
-            // padding: 0px 5px;
+            padding: 0px 5px;
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 76px;
+            height: 78px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -141,7 +141,7 @@ title: Math, Sonification, Plots
             // text-align: left;
             font-size: 16px;
             font-weight: bold;
-            // padding: 0px 5px;
+            padding: 0px 50px;
             border-top: 20px solid transparent;
             border-right: 40px solid #000;
             border-bottom: 20px solid transparent;
