--- a/fixes/index.html
+++ b/fixes/index.html
@@ -105,7 +105,7 @@ title: Math, Sonification, Plots
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 78px;
+            height: 82px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -125,7 +125,7 @@ title: Math, Sonification, Plots
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 78px;
+            height: 82px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -141,7 +141,7 @@ title: Math, Sonification, Plots
             // text-align: left;
             font-size: 16px;
             font-weight: bold;
-            padding: 0px 50px;
+            // padding: 0px 5px;
             border-top: 20px solid transparent;
             border-right: 40px solid #000;
             border-bottom: 20px solid transparent;
