--- a/fixes/index.html
+++ b/fixes/index.html
@@ -100,12 +100,14 @@ title: Math, Sonification, Plots
             color: white; /* White text */
             // color: #FFFFFF;
             text-align: left;
+            font-size: 18px;
+            font-weight: bold;
             padding: 0px 5px;
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 86px;
+            height: 88px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -120,12 +122,14 @@ title: Math, Sonification, Plots
             color: white; /* White text */
             // color: #FFFFFF;
             text-align: left;
+            font-size: 18px;
+            font-weight: bold;
             padding: 0px 5px;
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 86px;
+            height: 88px;
 
             // transition: 100ms all ease;
             cursor: pointer;
