--- a/fixes/index.html
+++ b/fixes/index.html
@@ -106,8 +106,8 @@ title: Math, Sonification, Plots
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
-            width: 74;
-            height: 88px;
+            width: 76;
+            height: 90px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -128,8 +128,8 @@ title: Math, Sonification, Plots
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
-            width: 74;
-            height: 88px;
+            width: 76;
+            height: 90px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -252,4 +252,4 @@ title: Math, Sonification, Plots
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
         <button class="play" onclick="play(this)">SONIFICATION</button>
         <button class="vol" onclick="vol_dec()">-</button>
-        <button class="ume" onclick="vol_inc()">+ VOLUME</button>
+        <button class="ume" onclick="vol_inc()">+ VOL</button>
