--- a/fixes/index.html
+++ b/fixes/index.html
@@ -106,8 +106,8 @@ title: Math, Sonification, Plots
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
-            width: 100;
-            height: 120px;
+            width: 74;
+            height: 74px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -128,8 +128,8 @@ title: Math, Sonification, Plots
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
-            width: 100;
-            height: 120px;
+            width: 74;
+            height: 74px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -250,6 +250,6 @@ title: Math, Sonification, Plots
                 }
         </script>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <button class="play" onclick="play(this)">SONIFICATION</button>
+        <button class="play" onclick="play(this)">SONIFY</button>
         <button class="vol" onclick="vol_dec()">-</button>
         <button class="ume" onclick="vol_inc()">+ VOL</button>
