--- a/fixes/index.html
+++ b/fixes/index.html
@@ -102,7 +102,7 @@ title: Math, Sonification, Plots
             text-align: left;
             font-size: 18px;
             font-weight: bold;
-            padding: 0px 5px;
+            padding: 50px 5px;
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
@@ -124,7 +124,7 @@ title: Math, Sonification, Plots
             text-align: left;
             font-size: 18px;
             font-weight: bold;
-            padding: 0px 5px;
+            padding: 50px 5px;
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
@@ -250,6 +250,6 @@ title: Math, Sonification, Plots
                 }
         </script>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <button class="play" onclick="play(this)">SONIFY</button>
+        <button class="play" onclick="play(this)">SONIFICATION</button>
         <button class="vol" onclick="vol_dec()">-</button>
         <button class="ume" onclick="vol_inc()">+ VOL</button>
