--- a/fixes/index.html
+++ b/fixes/index.html
@@ -102,7 +102,8 @@ title: Math, Sonification, Plots
             text-align: left;
             font-size: 18px;
             font-weight: bold;
-            padding: 0px 0px;
+            padding: 0px 5px;
+            margin-right:16px;
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
@@ -124,12 +125,14 @@ title: Math, Sonification, Plots
             text-align: left;
             font-size: 18px;
             font-weight: bold;
-            padding: 10px 0px;
+            padding: 0px 5px;
+            margin-right:16px;
             // background: transparent;
             box-sizing: border-box;
             // width: 74px;
             width: 74;
-            height: 74px;
+            // height: 74px;
+            height: 66px;
 
             // transition: 100ms all ease;
             cursor: pointer;
@@ -146,6 +149,7 @@ title: Math, Sonification, Plots
             font-size: 18px;
             font-weight: bold;
             // padding: 0px 5px;
+            margin-right:16px;
             border-top: 25px solid transparent;
             border-right: 50px solid #000;
             border-bottom: 25px solid transparent;
