--- a/fixes/index.html
+++ b/fixes/index.html
@@ -115,7 +115,7 @@ title: Math, Sonification, Plots
 
             border-color: transparent transparent transparent #202020;
             border-style: solid;
-            border-width: 33px 0px 33px 60px;
+            border-width: 37px 0px 37px 60px;
         }
 
         .pause {
@@ -253,6 +253,6 @@ title: Math, Sonification, Plots
                 }
         </script>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <button class="play" onclick="play(this)">SONIFICATION</button>
+        <button class="play" onclick="play(this)"></button>
         <button class="vol" onclick="vol_dec()">-</button>
         <button class="ume" onclick="vol_inc()">+ VOL</button>
